demo/gloo-edge/manifest/policy.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: checkrequest
spec:
  rules:
    - name: deny-post-request
      assert:
        any:
        - message: "POST method calls are not allowed only GET call are allowed"
          check:
            request:
                http:
                    method: GET
